k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bunsen-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: bunsen
