k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  name: bunsen-ingress
spec:
  backend:
    serviceName: bunsen-service
    servicePort: 80
  rules:
  - host: prod.bunsen.k8s.puppet.net
    http:
      paths:
      - backend:
          serviceName: bunsen-service
          servicePort: 80
        path: /
  tls:
  - secretName: bunsen-prod-tls
    hosts:
    - prod.bunsen.k8s.puppet.net
